# skillet

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.claude/commands/: check.md  fmt.md  release.md  test.md
.claude/hooks/: post_edit_format.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/pandasx/: README.md  pyproject.toml
examples/pandasx/src/pandasx/: __init__.py  _skillet_entry.py
examples/pandasx/src/pandasx/skills/pandasx/: SKILL.md
src/skillet/: __init__.py  __main__.py  cli.py  discovery.py  install.py  paths.py
src/skillet/skills/: __init__.py
src/skillet/skills/skillet/: SKILL.md
tests/: conftest.py  test_cli.py  test_discovery.py  test_install.py
